adiconando uma funcao no back para contabilizar quanto tem em caixa

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -106,5 +106,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": "6242a668-79ae-4468-b79b-2c080f5e94ec"
     }
 }
