subindo codigo com o modal do pagamento do colaborador com alinhamento entre as informações

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -30,6 +30,7 @@
                         "styles": [
                             "node_modules/primeicons/primeicons.css",
                             "node_modules/primeng/resources/primeng.css",
+                            "node_modules/primeflex/primeflex.css",
                             "node_modules/primeng/resources/themes/arya-orange/theme.css",
                             "src/styles.scss"
                         ],
